# discopipe

./: README.md  pyproject.toml
.github/workflows/: test.yaml
discopipe/: _modidx.py  bot.py
docs/superpowers/plans/: 2026-07-13-discopipe.md
docs/superpowers/specs/: 2026-07-13-discopipe-design.md
nbs/: 00_bot.ipynb  index.ipynb  nbdev.yml
